[gd_scene load_steps=18 format=3 uid="uid://ruja4wfit8pk"]

[ext_resource type="Script" path="res://Enemies/GreenSlime/green_slime.gd" id="1_goxcx"]
[ext_resource type="Texture2D" uid="uid://c1b3myi8q3gvg" path="res://Boss/PurpleSlimeBoss/slime_purple.png" id="2_ys0tv"]
[ext_resource type="Script" path="res://Boss/PurpleSlimeBoss/killZone.gd" id="3_pjiom"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1rxnt"]
atlas = ExtResource("2_ys0tv")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kiiw"]
atlas = ExtResource("2_ys0tv")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emfc"]
atlas = ExtResource("2_ys0tv")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_081bo"]
atlas = ExtResource("2_ys0tv")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s77b3"]
atlas = ExtResource("2_ys0tv")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r6bs"]
atlas = ExtResource("2_ys0tv")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn10n"]
atlas = ExtResource("2_ys0tv")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuu51"]
atlas = ExtResource("2_ys0tv")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e332x"]
atlas = ExtResource("2_ys0tv")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsr4o"]
atlas = ExtResource("2_ys0tv")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_4gt33"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rxnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kiiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_081bo")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s77b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r6bs")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn10n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuu51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e332x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsr4o")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ymg4a"]
size = Vector2(27.6667, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_1mc2s"]
radius = 18.0278

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qcwmw"]
size = Vector2(32.3333, 8.5)

[node name="PurpleSlimeBoss" type="CharacterBody2D"]
position = Vector2(0, -72)
scale = Vector2(3, 3)
script = ExtResource("1_goxcx")
health_amount = 15

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4gt33")
animation = &"hurt"
autoplay = "idle"
frame_progress = 0.362985

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.166666, 17)
shape = SubResource("RectangleShape2D_ymg4a")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 12)
shape = SubResource("CircleShape2D_1mc2s")
debug_color = Color(0.977818, 0.00355162, 0.398394, 0.42)

[node name="killZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_pjiom")

[node name="Timer" type="Timer" parent="killZone"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killZone"]
position = Vector2(-0.166667, 19.9167)
shape = SubResource("RectangleShape2D_qcwmw")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="killZone" to="killZone" method="_on_body_entered"]
